Adding check for null document.  Prevents crash described in bug 20677. r=brendan@mozilla.org